# sfm-utils

./: .gitignore  LICENSE  README.md  setup.cfg  setup.py
.github/workflows/: python-package.yml
sfm_utils/: __init__.py  aliceVision.py  alicevision.py  io.py  openMVG.py  openmvg.py  sfm.py
tests/: sfm_utils_tests.py
tests/expected/: alicevision_sfm.json  openmvg_sfm.json
