[metadata]
name = PySfMUtils
version = 1.1.0
author = Seth Parker
author_email = c.seth.parker@uky.edu
description = A Python library for interacting with Structure-from-Motion projects
long_description = file: README.md
long_description_content_type = text/markdown
url = https://gitlab.com/educelab/sfm-utils
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent

[options]
packages = find:
install_requires = numpy>=1.15
python_requires = >=3.6